<resources>
    <string name="app_name">Foodie</string>
    <string name="title_view" translatable="false">Title</string>
    <string name="description" translatable="false">Description:</string>
    <string name="ingredients" translatable="false">Ingredients:</string>
    <string name="calories" translatable="false">Calories:</string>
    <string name="link_to_recipe" translatable="false">Link to recipe:</string>
    <string name="add_new_meal" translatable="false">Add New Meal!</string>
    <string name="card_view_meal_item" translatable="false">picture of meal item</string>
    <string name="image_description" translatable="false">image of meal</string>
    <string name="add_new_meal_button" translatable="false">Submit</string>

    <string-array name="meal_titles">
        <item>Chicken Parmesan</item>
        <item>Shrimp Scampi</item>
        <item>Chicken and Broccoli</item>
        <item>General Tso Chicken</item>
        <item>Lomo Saltado</item>
        <item>Pineapple fried rice</item>
    </string-array>

    <string-array name="meal_description">
        <item>Chicken Parmesan or Chicken Parmigiana are both the same delicious,\n
            mouth-watering dish that you know well and love. It\’s a breaded chicken cutlet with lots of melted mozzarella and/or provolone.\n
            Doesn\’t that make your stomach rumble?</item>
        <item>Garlic Butter Shrimp Scampi is so quick and easy! A garlic buttery scampi sauce with a hint of white wine and lemon in less than 10 minutes!\n
            Serve as an appetizer/light meal OR for dinner with pasta! </item>
        <item>Juicy chicken pieces and tender crisp broccoli are mixed with a homemade stir fry sauce\n
            to create a quick meal that the whole family will love! I love serving this chicken broccoli\n
            stir fry recipe over rice, but you can serve it over noodles if you\'d like, or even enjoy it on its own!</item>
        <item>What is General Tso\'s chicken? This chicken dish is a popular Chinese entree made with\n
            fried chicken pieces coated in a sweet and slightly spicy sauce. This chicken is similar to\n
            sesame chicken, but the sauce has a little more heat and a more complex savory flavor.\n
            It is often served with a side of steamed broccoli.</item>
        <item>A popular, traditional Peruvian dish, a stir fry that typically combines marinated\n
            strips of sirloin (or other beef steak) with onions, tomatoes, french fries, and other\n
            ingredients; and is typically served with rice.</item>
        <item>Pineapple Fried Rice. Pineapple fried rice is a quick stir-fry with Thai-inspired ingredients like\n
            jasmine rice, curry, fish sauce, red bell pepper, pineapple, peas, and shrimp. This side dish is served\n
            up in an easy to make pineapple boat for an exotic touch.</item>
    </string-array>

    <string-array name="meal_ingredients">
        <item>For 4 servings\n\n
            2 boneless, skinless chicken breasts\n
            1 teaspoon salt\n
            ½ teaspoon pepper\n
            ½ teaspoon onion powder\n
            1 cup flour\n
            2 eggs\n
            1 cup seasoned breadcrumb\n
            2 cups marinara sauce\n
            8 slices fresh mozzarella cheese\n
            ½ cup grated parmesan cheese\n
            fresh basil, thinly sliced, to serve\n
            vegetable oil, for frying\n
        </item>
        <item>For 2 servings\n\n
            3 tablespoons butter\n
            3 cloves garlic, chopped\n
            1 lb shrimp, peeled and deveined\n
            1 teaspoon salt\n
            1 teaspoon pepper\n
            ½ lemon, juiced\n
            1 teaspoon red chili flake\n
            ¼ cup fresh parsley, chopped\n
            ½ lb spaghetti, cooked\n
        </item>
        <item>For two servings\n\n
            1 lb chicken, cubed \n
            1 teaspoon salt\n
            1 teaspoon pepper\n
            1 cup broccoli, chopped\n
            1 cup bell pepper, diced\n
            ½ cup soy sauce\n
            ¼ cup honey\n
            2 cloves garlic\n
            1 teaspoon ginger\n
            1 tablespoon sesame seed
        </item>
        <item>For 4 servings\n\n
           <b>CHICKEN</b>\n
            8 cups vegetable oil, for frying\n
            1 cup rice wine\n
            ¼ cup soy sauce\n
            1 lb boneless, skinless chicken thighs, cubed\n
            1 cup flour\n
            1 tablespoon salt\n\n

            <b>GENERAL TSO’S SAUCE</b>>\n
            1 tablespoon vegetable oil\n
            2 cloves fresh garlic, minced\n
            1 teaspoon fresh ginger, grated\n
            ½ cup dried chili pod\n
            ¼ cup rice wine\n
            ¼ cup soy sauce\n
            ¼ cup rice wine vinegar, may substitute with white wine vinegar\n
            ¼ cup sugar\n\n

            <b>CORNSTARCH SLURRY</b>>\n
            ½ tablespoon cornstarch\n
            ½ tablespoon water\n\n

            <b>GARNISH</b>\n
            ¼ cup green onion, chopped\n
            white rice
        </item>
        <item>For 4 servings\n\n
            2 tablespoons vegetable oil, divided\n
            1 lb sirloin steak, cut into strips\n
            salt, to taste\n
            black pepper, to taste\n
            ½ red onion, sliced\n
            1 medium tomato, sliced\n
            2 cloves garlic, minced\n
            1 tablespoon aji amarillo paste\n
            2 tablespoons soy sauce\n
            1 tablespoon white vinegar\n
            1 tablespoon fresh cilantro, chopped\n
            1 lb french fries, cooked, hot\n
            white rice, cooked, for serving, optional
        </item>
        <item>
            for 2 servings\n\n
            1 pineapple\n
            8 tablespoons vegetable oil, divided\n
            2 eggs, beaten\n
            ½ lb king prawn\n
            3 cloves garlic, minced\n
            1 red chili, finely diced\n
            1 onion, finely chopped\n
            1 ¾ cups rice, cooked\n
            1 cup mixed vegetable\n
            1 tablespoon fish sauce\n
            1 lime, juiced\n
            2 spring onions, finely chopped
        </item>
    </string-array>

    <string-array name="meal_calories">
        <item>Calories: 686</item>
        <item>Calories: 829</item>
        <item>Calories: 651</item>
        <item>Calories: 4192</item>
        <item>Calories: 431</item>
        <item>Calories: 870</item>
    </string-array>

    <string-array name="meal_links">
        <item>https://tasty.co/recipe/the-best-crispy-chicken-parmesan</item>
        <item>https://tasty.co/recipe/garlic-shrimp-scampi</item>
        <item>https://tasty.co/recipe/one-pan-chicken-and-broccoli-stir-fry</item>
        <item>https://tasty.co/recipe/general-tsos-chicken</item>
        <item>https://tasty.co/recipe/peruvian-lomo-saltado</item>
        <item>https://tasty.co/recipe/pineapple-fried-rice</item>
    </string-array>

    <array name="meal_images">
        <item>@drawable/chicken_parm</item>
        <item>@drawable/shrimp_scampi2</item>
        <item>@drawable/chicken_broccoli2</item>
        <item>@drawable/general_tso_chicken</item>
        <item>@drawable/lomo_saltado</item>
        <item>@drawable/pineapple_fried_rice</item>
    </array>

</resources>