<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/card_view_meal_item"/>

        <TextView
            android:id="@+id/list_item_title"
            style="@style/TextView_newItem"
            android:text="@string/title_view"/>

        <TextView
            android:id="@+id/list_item_calories"
            style="@style/TextView_newItem"
            android:text="@string/calories"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>